# water

./: .env.example  .gitignore  API_FIXES_DOCUMENTATION.md  AZURE_HACKATHON_SETUP.md  CATEGORICAL_FEATURE_ANALYSIS.md  COMMIT_SUMMARY.md  COMPLETION_REPORT.md  CONFIGURATION_CHANGES_GUIDE.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_FINAL.md  FIXES_APPLIED_2025_12_06.md  HACKATHON_COMPLETE_GUIDE.md  HACKATHON_QUICK_REF.md  HACKATHON_SETUP_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MODEL_API_GUIDE.md  MODEL_API_TESTING_GUIDE.md  MODEL_BIAS_ANALYSIS.md  MODEL_QUALITY_ASSESSMENT.md  MODEL_TRAINING_FIX_GUIDE.md  QUICK_START.md  RAGAS_INTEGRATION.md  RAG_DATABASE_QUICK_START.md  RAG_DATABASE_SETUP_COMPLETION.md  README.md  README_FINAL.md  README_HACKATHON.md  SETUP_GUIDE.md  WHAT_CHANGED_SUMMARY.md  ZONE_SPECIFIC_TRAINING_REPORT.md  check_db.py  create_zone_specific_datasets.py  debug_preprocess.py  examples_rag_database_usage.py  pyproject.toml  requirements.txt  test_5classes_simple.py  test_all_classes.py  test_all_zones_5classes.py  (+13 more)
data_generator/: advanced_data_generator.py
model/: eda.py  hybrid_water_leakage_anomaly.py  model.py
src/: __init__.py  client.py
src/config/: __init__.py  config.py
src/data_generator/: __init__.py  prod_data_generator.py  training_data_generator.py
src/model/: DASHBOARD_GUIDE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_QUICKSTART.md  __init__.py  api.py  dashboard.py  dashboard_launcher.py  dashboard_requirements.txt  hybrid_water_leakage_anomaly.py  model.py
src/rag/: ENHANCED_RAG_ARCHITECTURE.md  ENHANCED_RAG_SUMMARY.md  INTEGRATION_GUIDE.md  LANGGRAPH_INTEGRATION_COMPLETE.md  __init__.py  self_correcting_rag.html
src/rag/agents/healing_agent/: __init__.py  rl_hallucination_controller.py  rl_healing_agent.py
src/rag/agents/langgraph_agent/: __init__.py  __main__.py  api.py  langgraph_rag_agent.py
src/rag/api/: QUICKSTART.md  README.md  README_NEW.md  SETUP_SUMMARY.py  __init__.py  launcher.py  startup.py
src/rag/config/: __init__.py  env_config.py  prompt_loader.py
src/rag/evaluation/: __init__.py  ragas_evaluator.py
src/rag/guardrails/: __init__.py  custom_guardrails.py
src/rag/pages/: __init__.py  chat_rag_admin.py  streamlit_app.py
src/rag/rag_db_models/: DATABASE_SETUP_GUIDE.md  QUICK_REFERENCE.md  __init__.py  __main__.py  db_setup.py
src/rag/rag_db_models/db/: __init__.py  connection.py
src/rag/rag_db_models/db_mgration/: 012_update_rag_history_guardrail_check.py  __init__.py
src/rag/rag_db_models/db_models/: __init__.py  agent_memory_model.py  base_model.py  chunk_embedding_data_model.py  document_metadata_model.py  rag_history_model.py
src/rag/rag_db_models/db_seeder/: 008_create_document_metadata_table_rag.py  009_create_rag_history_table_rag.py  010_create_chunk_embedding_data_table_rag.py  012_create_agent_memory_table.py  __init__.py
src/rag/reporting/: __init__.py  rag_analytics_report.py  rl_dashboard.py
src/rag/tools/: __init__.py  adjust_config_tool.py  document_classification_tool.py  document_markdown_converter.py  healing_tools.py  ingestion_tools.py  rbac_retrieval_tool.py  retrieval_tools.py  truthfulness_validator.py
src/rag/tools/services/: llm_service.py  vectordb_service.py
src/rag/visualization/: __init__.py  animated_graph_visualizer.py  langgraph_visualizer.py
tests/: __init__.py
